--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Margaret Meek Lange
 email: margaret.meek@gmail.com
 description: Exploring Data Science 
-url: "http://margaretmlange.com" # the base hostname & protocol for your site
+url: "http://margaretlange.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  margaretlange
 
