adding twitter user name

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Margaret Meek Lange
 email: margaret.meek@gmail.com
 description: Exploring Data Science 
 url: "http://margaretlange.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+twitter_username: ememell12345
 github_username:  margaretlange
 
 # Build settings
