--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 destination: ./_site
 title: Margaret Meek Lange
-email: margaret.meek@gmail.com
+email: 
 description: Exploring Data Science 
 url: "http://margaretlange.github.io" # the base hostname & protocol for your site
 twitter_username:
